--- a/hatcher_source/templates/credentials/landing_page.html
+++ b/hatcher_source/templates/credentials/landing_page.html
@@ -10,8 +10,17 @@
 </head>
 <body>
     <h1>landing page </h1>
-    <a href="{% url 'login'%}"><button style="position:fixed;top: 10px;right: 100px;" class="btn btn-success" >login</button></a>
-    <a href="{% url 'register'%}"><button style="position:fixed;top: 10px;right: 15px;" class="btn btn-primary" >register</button></a>
+    <a href="{% url 'employer_login'%}"><button style="position:fixed;top: 10px;right: 200px;" class="btn btn-secondary" >Employer Login</button></a>
+
+    <a href="{% url 'register'%}"><button style="position:fixed;top: 10px;right: 15px;" class="btn btn-success" >Employer Register</button></a>
+
+
+    <a href="{% url 'login'%}"><button style="position:fixed;top: 50px;right: 200px;" class="btn btn-primary" >Candidate Login</button></a>
+
+
+    <a href="{% url 'register'%}"><button style="position:fixed;top: 50px;right: 15px;" class="btn btn-success" >Candidate Register</button></a>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
