--- a/hatcher_source/templates/credentials/register.html
+++ b/hatcher_source/templates/credentials/register.html
@@ -1,45 +1,87 @@
 {% extends '../blocks/credentials_block.html' %}
-
+{% block stylesheet %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/register.css' %}">
+{% endblock stylesheet %}
 {% block content %}
-<h1 class="text-center">Register</h1>
-<a href="{% url 'login'%}"><button style="position:fixed;top: 10px;right: 15px;" class="btn btn-primary" >Login</button></a>
-<form class="container" method="post" enctype="multipart/form-data"
- action="{% url 'register' %}">
+<div class="container main-container">
+<h1 class="text-center sections-heading">Register</h1>
+
+<form class="container text-center" method="post" enctype="multipart/form-data"
+ action="{% url 'register' %}" >
     {% csrf_token %}
-    <div class="mb-3">
-        <label for="fname" class="form-label">First Name</label>
-        <input   name = 'FirstName' type="text" class="form-control"  id="fname" aria-describedby="emailHelp" required>
+    <div class="mb-3 d-inline-block">
+        <input   name = 'FirstName' type="text" class="form-control text-center"  id="fname" aria-describedby="emailHelp" placeholder="First Name" required>
+      </div>
+      <div class="mb-3 d-inline-block">
+        <input  name="LastName" type="text" class="form-control text-center" id="lname" placeholder="Last Name" required>
+      </div>
+
+      <div class="mb-3 d-inline-block">
+        <input  name="age" 
+         type="text" 
+         class="form-control text-center" 
+         id="age" 
+         maxlength="2"
+        pattern="\d{2}" 
+        oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 2);" 
+         placeholder="Age"
+         required>
+      </div>
+      <div class="mb-3 d-inline-block">
+        <input  name="age" 
+         type="text" 
+         class="form-control text-center" 
+         id="occupation" 
+         placeholder="Occupation"
+         required>
+      </div>
+      <div class="mb-3 selection-box">
+        <select class="form-select " >
+          <option selected>Stream</option>
+          <option value="1">Science</option>
+          <option value="2">Commerce</option>
+          <option value="3">Arts</option>
+        </select>
+        <select class="form-select " >
+          <option selected>Qualified</option>
+          <option value="1">Under Graduate</option>
+          <option value="2">Graduate</option>
+          <option value="3">10/12 pass</option>
+        </select>
       </div>
       <div class="mb-3">
-        <label for="lname" class="form-label">Last Name</label>
-        <input  name="LastName" type="text" class="form-control" id="lname" required>
+        <textarea name="Bio" class="form-control text-center" placeholder="Bio" id="exampleFormControlTextarea1" rows="1"></textarea>
       </div>
-      <div class="mb-3">
-        <label for="age" class="form-label">Age</label>
-        <input  name="age" type="number" class="form-control" id="age" required>
+      <div class="mb-3 d-inline-block">
+        <input  name="phone_number" 
+        type="text" 
+        maxlength="10"
+        pattern="\d{10}" 
+        oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" 
+        class="form-control text-center" 
+        placeholder="Phone Number"
+        id="exampleInputPassword1">
       </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Bio</label>
-        <textarea name="Bio" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <div class="mb-3 d-inline-block">
+        <input  name="Email" type="email" class="form-control text-center" id="exampleInputEmail1" 
+        placeholder="Email" required>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Phone Number</label>
-        <input  name="phone_number" type="number" class="form-control" id="exampleInputPassword1">
+      <div  class="mb-3">
+        <input  name="Profile_Image" class="form-control text-center" type="file" id="formFile" required>
       </div>
-      <div  requiredclass="mb-3">
-        <label for="formFile" class="form-label">Profile Picture</label>
-        <input  name="Profile_Image" class="form-control" type="file" id="formFile">
-      </div>
-    <div class="mb-3">
-       <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input  name="Email" type="email" class="form-control" id="exampleInputEmail1" required>
+
+    <div class="mb-3 d-inline-block">
+      <input  name="Password" type="password" class="form-control text-center" id="Password" placeholder="Password" required>
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input  name="Password" type="password" class="form-control" id="exampleInputPassword1" required>
+    <div class="mb-3 d-inline-block">
+      <input  name="Confirm_Password" type="password" class="form-control text-center" id="Password2" placeholder="Confirm SPassword" required>
     </div>
-   
-    <button requiredon type="submit" class="btn btn-primary">Submit</button>
+    <center>    <button requiredon type="submit" class="sub-btn">Register</button>
+      <br>
+      <p>Already register ? <a href="{% url 'login'%}">Login</a></p>
+    </center>
   </form>
+</div>
 {% endblock content %}
 
