--- a/hatcher_source/templates/blocks/credentials_block.html
+++ b/hatcher_source/templates/blocks/credentials_block.html
@@ -6,9 +6,10 @@
     <title>Hatcher</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    {% block stylesheet %}
+    {% endblock stylesheet %}
 </head>
 <body>
-   
     {% block content%}
     {% endblock content%}
 
