--- a/hatcher_source/templates/credentials/landing_page.html
+++ b/hatcher_source/templates/credentials/landing_page.html
@@ -6,19 +6,180 @@
     <title>Hacther</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/landing_page.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 <body>
-    <h1>landing page </h1>
-    <a href="{% url 'employer_login'%}"><button style="position:fixed;top: 10px;right: 200px;" class="btn btn-secondary" >Employer Login</button></a>
+    <nav class="navbar navbar-expand-lg " id="nav-section">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Hacther</a>
+          <button class="navbar-toggler" style="border: none;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars" style="color: #B197FC;"></i>
+          </button>
+          <div class="collapse navbar-collapse " id="navbarNav">
+            <ul class="navbar-nav text-center">
+              <li class="nav-item">
+                <a class="nav-link active fs-5" href="#nav-section">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-5" href="#feature-section">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-5" href="#price-section">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-5" href="#contact-section">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+    <div class=" first-section p-5 border rounded overflow-hidden text-center ">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJgmBxNTKNyIYKzNJDWXLMa3CM37WjuREwIg&s" alt="Development" >
+        <h1 class="sections-heading">Join With Us</h1>
+        <!-- Modal Toggle Buttons Here -->
+         <div class="container text-center">
+          <button type="button" class="btn btn-primary fs-5"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+            As Employer
+          </button>
+          <button type="button" class="btn btn-primary fs-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+           As Candidate
+          </button>
+         </div>
+    </div>
+    
 
-    <a href="{% url 'employer_register'%}"><button style="position:fixed;top: 10px;right: 15px;" class="btn btn-success" >Employer Register</button></a>
 
 
-    <a href="{% url 'login'%}"><button style="position:fixed;top: 50px;right: 200px;" class="btn btn-primary" >Candidate Login</button></a>
+    <!-- Modals Here -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">As Employer</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body d-flex flex-column justify-content-evenly flex-sm-row user-modal" >
+            <a href="{% url 'employer_register'%}"><button class="btn  btn-secondary m-2" >Employer Register</button></a>
+            <a href="{% url 'employer_login'%}"><button class="btn  btn-success m-2" >Employer Login</button></a>
+        
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">As Employer</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body d-flex flex-column justify-content-evenly flex-sm-row user-modal">  
+            <a href="{% url 'register'%}"><button  class="btn  btn-secondary  m-2" >Candidate Register</button></a>
+            <a href="{% url 'login'%}"><button  class="btn  btn-success m-2" >Candidate Login</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-    <a href="{% url 'register'%}"><button style="position:fixed;top: 50px;right: 15px;" class="btn btn-success" >Candidate Register</button></a>
+    <!-- Card Sections -->
+    <div class="container mt-5 mb-5 " id="feature-section">
+       <h1 class="sections-heading">Features</h1>
+      <div class="card-group">
+        <div class="card rounded">
+          <div class="p-1 ">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJgmBxNTKNyIYKzNJDWXLMa3CM37WjuREwIg&s" class="card-img-top border rounded" alt="...">
+          </div>
+
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At debitis fugit inventore animi cupiditate sapiente quia cumque voluptatum eos dolor voluptate similique obcaecati et culpa, quam iste dolorum! Praesentium at, nihil deleniti delectus voluptatem deserunt iure facilis sapiente consectetur odio in, perferendis ducimus eius culpa alias eaque nisi minima. Nihil cumque quasi ullam unde pariatur voluptates adipisci consequatur sunt dignissimos?</p>
+          </div>
+
+        </div>
+        <div class="card rounded">
+          <div class="p-1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJgmBxNTKNyIYKzNJDWXLMa3CM37WjuREwIg&s" class="card-img-top border rounded" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci fugiat temporibus eaque consectetur quae tempore obcaecati iste dolorum totam hic, labore, fugit debitis nam dignissimos error vero, nulla omnis! Sit nisi sint voluptatem tempore eaque veniam, voluptas quo et at amet laudantium autem eum deserunt minus quasi, repellat dolore. Odio!</p>
+          </div>
+
+        </div>
+        <div class="card rounded">
+          <div class="p-1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJgmBxNTKNyIYKzNJDWXLMa3CM37WjuREwIg&s" class="card-img-top border rounded" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dolore voluptatum vitae maxime quidem beatae ab aliquid, autem blanditiis distinctio rerum nesciunt totam necessitatibus cum, quas optio magnam eveniet corrupti?</p>
+          </div>
+
+        </div>
+      </div>
+     </div>
+
+
+     <!-- Price Section -->
+     <h1 class="sections-heading" id="price-section">Available Plans</h1>
+     <div class="container price-section">
+      <div class="card mb-3" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Take It</a>
+        </div>
+      </div>
+      
+      <div class="card  mb-3" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Take It</a>
+        </div>
+      </div>
+      
+      <div class="card " style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Take It</a>
+        </div>
+      </div>
+     </div>
+
+
+    <!-- Contact Section -->
+    <h1 class="sections-heading mt-5 mb-2" id="price-section">Contact Us</h1>
+    <div class="container contact-section d-flex flex-column flex-sm-row justify-content-evenly  mb-5" id="contact-section">
+      <section >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sapiente impedit sunt, officiis deleniti quaerat excepturi atque tempora esse eveniet quibusdam dicta optio doloremque unde natus aperiam eaque iure at. Earum rem fugit nemo maxime neque commodi perferendis quod amet, praesentium modi, eligendi unde sunt voluptas, error ex asperiores dicta.
+      </section>
+
+      <div class="container  form-container  d-lg-flex justify-content-center">
+        <form action="#" method="post" class="contact-form   text-start border rounded d-flex flex-column justify-content-between">
+          <div class="mb-3">
+            <input type="email" class="form-control" id="name" placeholder="Full Name" required>
+          </div>
+          <div class="mb-3">
+            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+          </div>
+          <div class="mb-3">
+            <textarea class="form-control" id="feddback" rows="3" style="resize: none;" placeholder="Any FeedBack" required></textarea>
+          </div>
+          <input type="submit" class="w-50  align-self-center  btn form-btn fs-5">
+        </form>
+      </div>
+    </div>
+     <!-- Footer Section -->
+    <footer class=" bg-black text-light h-50">
+footer
+    </footer>
+   
+
+    <!-- All Credential Models -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
