--- a/hatcher_source/templates/emp_dashboard/home.html
+++ b/hatcher_source/templates/emp_dashboard/home.html
@@ -3,21 +3,27 @@
 {% block content %}
   <!-- Display the user's data after form submission -->
   {% if employer %}
-  <a href="{% url 'employer_logout' %}" style="position:fixed;top: 10px;right: 15px;"><button class="btn btn-danger">logout</button></a>
   <a href="{% url 'community_post:post_list' %}" style="position:fixed;top: 50px;right: 15px;"><button class="btn btn-primary">Community</button></a>
   <a href="{% url 'employer_logout' %}" style="position:fixed;top: 10px;right: 15px;"><button class="btn btn-danger">logout</button></a>
 
-
+  {% for c in companies.values%}
+  <img src="../media/{{c.image}}" width="100px" alt="..">
+  {%endfor%}
     <h2>First Name: {{ employer.first_name }}</h2>
     <h2>Last Name: {{ employer.last_name }}</h2>  
     <h2>Phone Number: {{ employer.phone_no }}</h2>
     <h2>Email: {{ employer.email }}</h2>
     <h2>Password: {{ employer.password }}</h2>
     {% endif %}
-    <a href="{% url 'start_hiring' %}" style="position:fixed;top: 10px;right: 15px;"><button class="btn btn-danger">start_hiring</button></a>
-    
+    <a href="{% url 'start_hiring' %}"><button  type="button" class="btn btn-warning">Start Hiring</button></a>
+    <a href="{% url 'company_register' %}"><button  type="button" class="btn btn-warning">Add company</button></a>
+    <div class="container text-center">
     {% if posted_job %}
+    {% for job in posted_job %}
+    <p> {{forloop.counter}}. {{job}}, Description : {{job.description}}</p>
+    {%endfor%}
     {% else %}
     <p>No Job Posted</p>
     {% endif %}
+  </div>
 {% endblock content %}
