--- a/hatcher_source/templates/credentials/register.html
+++ b/hatcher_source/templates/credentials/register.html
@@ -53,7 +53,7 @@
       <div class="mb-3">
         <textarea name="Bio" class="form-control text-center" placeholder="Bio" id="exampleFormControlTextarea1" rows="1"></textarea>
       </div>
-      <div class="mb-3 d-inline-block">
+      <div class="mb-3 ">
         <input  name="phone_number" 
         type="text" 
         maxlength="10"
@@ -63,25 +63,41 @@
         placeholder="Phone Number"
         id="exampleInputPassword1">
       </div>
-      <div class="mb-3 d-inline-block">
-        <input  name="Email" type="email" class="form-control text-center" id="exampleInputEmail1" 
-        placeholder="Email" required>
+      <div class="input-group mb-3">
+        <input name="Email" type="email" class="form-control text-center" placeholder="Email" aria-describedby="button-addon2" id="email" autocomplete="off" required> 
+        <button class="btn btn-primary" type="button" id="send-otp-btn">
+          <div class="spinner-border visually-hidden" style="height: 20px;width: 20px;" role="status" id="e-spin"></div>
+          <p class="" id="sd-otp">Send OTP</p>
+        </button>
+      </div>
+      <div class="input-group mb-3">
+          <input name="OTP" type="text" class="form-control text-center" id="otp" 
+          placeholder="Enter OTP" autocomplete="off" required>
+          <button class="btn btn-primary"` type="button" id="verify-otp-btn">
+            <div class="spinner-border visually-hidden" style="height: 20px;width: 20px;" role="status" id="o-spin"></div>
+            <p class="" id="v-otp">Verify OTP</p>
+          </button>
       </div>
       <div  class="mb-3">
         <input  name="Profile_Image" class="form-control text-center" type="file" id="formFile" required>
       </div>
 
     <div class="mb-3 d-inline-block">
-      <input  name="Password" type="password" class="form-control text-center" id="Password" placeholder="Password" required>
+      <input  name="Password" type="password" class="form-control text-center" id="Password" placeholder="Password" autocomplete="off" required>
     </div>
     <div class="mb-3 d-inline-block">
-      <input  name="Confirm_Password" type="password" class="form-control text-center" id="Password2" placeholder="Confirm SPassword" required>
+      <input  name="Confirm_Password" type="password" class="form-control text-center" id="Password2" placeholder="Confirm SPassword" autocomplete="off" required>
     </div>
-    <center>    <button requiredon type="submit" class="sub-btn">Register</button>
+    <center>
+      <button  type="submit" id="submit-btn" class="sub-btn">Register</button>
       <br>
       <p>Already register ? <a href="{% url 'login'%}">Login</a></p>
     </center>
   </form>
 </div>
 {% endblock content %}
+{% block script %}
+{% load static %}
+  <script src="{% static 'js/email_verify.js' %}"></script>
+{% endblock script %}
 
