--- a/hatcher_source/static/css/home.css
+++ b/hatcher_source/static/css/home.css
@@ -6,7 +6,22 @@
 .cmp_img{
     border-radius: 50%;
 }
-.width-50{
-    width: 50% !important;
+.w-20{
+    width: 20%;
 }
 
+.w-60{
+    width: 60%;
+}
+.profile-3{
+    background-image: url('../../media/logos/image.png');
+    height: max-content;
+}
+.container-part{
+    height: fit-content;
+}
+.search_div{
+    border-radius: 41px;
+    margin-bottom: 40px;
+    padding: 20px 50px;
+}
