--- a/hatcher_source/templates/blocks/credentials_block.html
+++ b/hatcher_source/templates/blocks/credentials_block.html
@@ -12,7 +12,9 @@
 <body>
     {% block content%}
     {% endblock content%}
-
+    
+    {% block script %}
+    {% endblock script %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
