--- a/hatcher_source/templates/credentials/employer_login.html
+++ b/hatcher_source/templates/credentials/employer_login.html
@@ -1,21 +1,34 @@
 {% extends '../blocks/credentials_block.html' %}
-
+{% block stylesheet %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
+{% endblock stylesheet %}
 {% block content %}
-<h1 class="text-center">Login</h1>
-<a href="{% url 'register'%}"><button style="position:fixed;top: 10px;right: 15px;" class="btn btn-primary" >Register</button></a>
-<form class="container" method="post" enctype="multipart/form-data"
- action="{% url 'employer_login' %}">
-    {% csrf_token %}
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-    </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
-    </div>
-   
-    <button type="submit" class="btn btn-primary">login</button>
-  </form>
+
+<div class="d-flex flex-column h-100 justify-content-center ">
+  <div class=" align-self-center  form-div ">
+    <h1 class="text-center sections-heading">Login</h1>
+    <form class="container " method="post" enctype="multipart/form-data"
+     action="{% url 'employer_login' %}">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input name="email" type="email" class="form-control text-center"  id="exampleInputEmail1" aria-describedby="emailHelp" autocomplete="off" required >
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input name="password" type="password" class="form-control text-center" id="exampleInputPassword1" autocomplete="off" required>
+        </div>
+       <center class="mt-4">
+        <button type="submit" class="sub-btn">login</button>
+        <br>
+        <p>New user ? <a href="{% url 'employer_register'%}">Register</a></p>
+      </center>
+        
+      </form>
+  </div>
+</div>
 {% endblock content %}
+
+
 
