--- a/hatcher_source/templates/credentials/employer_register.html
+++ b/hatcher_source/templates/credentials/employer_register.html
@@ -16,20 +16,20 @@
     </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Phone Number</label>
-        <input  name="phone_number" type="number" class="form-control" id="exampleInputPassword1">
+        <input  name="phone_number" type="number" class="form-control" id="exampleInputPassword1" autocomplete="off" required>
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Age</label>
-        <input  name="Age" type="number" class="form-control" id="exampleInputPassword1">
+        <input  name="Age" type="number" class="form-control" id="exampleInputPassword1" autocomplete="off" required>
       </div>
     
     <div class="mb-3">
        <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input  name="Email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+      <input  name="Email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" autocomplete="off" required>
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input  name="Password" type="password" class="form-control" id="exampleInputPassword1" required>
+      <input  name="Password" type="password" class="form-control" id="exampleInputPassword1" autocomplete="off" required>
     </div>
    
     <button requiredon type="submit" class="btn btn-primary">Submit</button>
