--- a/hatcher_source/templates/credentials/login.html
+++ b/hatcher_source/templates/credentials/login.html
@@ -5,7 +5,7 @@
 {% endblock stylesheet %}
 {% block content %}
 
-<div class="d-flex flex-column h-100 justify-content-center p-5">
+<div class="d-flex flex-column h-100 justify-content-center ">
   <div class=" align-self-center  form-div ">
     <h1 class="text-center sections-heading">Login</h1>
     <form class="container " method="post" enctype="multipart/form-data"
@@ -13,11 +13,12 @@
         {% csrf_token %}
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input name="email" type="email" class="form-control text-center"  id="exampleInputEmail1" aria-describedby="emailHelp" required >
+          <input name="email" type="email" class="form-control text-center"  id="exampleInputEmail1" aria-describedby="emailHelp" autocomplete="off" required >
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input name="password" type="password" class="form-control text-center" id="exampleInputPassword1" required>
+          <input name="password" type="password" class="form-control text-center" id="exampleInputPassword1" 
+          autocomplete="off" required>
         </div>
        <center class="mt-4">
         <button type="submit" class="sub-btn">login</button>
