Landing Page Done

--- a/hatcher_source/templates/blocks/credentials_block.html
+++ b/hatcher_source/templates/blocks/credentials_block.html
@@ -16,5 +16,10 @@
     {% block script %}
     {% endblock script %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.getElementById('reload').addEventListener('click', function() {
+          location.reload();
+        });
+      </script>
 </body>
 </html>
