--- a/hatcher_source/static/css/landing_page.css
+++ b/hatcher_source/static/css/landing_page.css
@@ -1,14 +1,16 @@
 body{
-    background-color: #fff7ed;
+    background-color: #747270;
     height: 100vh;
     font-family: monospace;
+    background-blend-mode: overlay;
+    
 }
 button:hover{
     margin-top: -5px;
     transition: 0.1s;
 }
 .navbar{
-    background: linear-gradient(90deg, rgba(52, 75, 190, 0.5) 10%, rgba(97, 8, 213, 0.5) 100%);
+    background: linear-gradient(90deg, rgb(1 2 7 / 77%) 10%, rgba(97, 8, 213, 0.5) 100%);
     position: fixed;
     width: 100%;
     top: 0px;
@@ -19,20 +21,26 @@ button:hover{
     margin: 87px 3rem ;
 }
 #navbarNav{
-    padding-right: 50px;
-    justify-content: end;
+    justify-content: center;
 }
-.nav-item:hover{
-    text-decoration: underline;
-    text-underline-offset: 6px;
-    text-decoration-thickness: 3px;
-    text-decoration-color: #3b10bb ;
+#nav-btns{
+    width: fit-content;
+    padding: 5px
 }
+.navbar-brand{
+    padding-left: 62px;
+}
+
 .nav-item{
     margin: 0 5px;
 }
 .nav-link{
-    color: black    !important;
+    color: #ecceff !important;
+    font-weight: bold;
+    transition: 0.5s;
+}
+.nav-link:hover{
+    color: #6a159f !important;
     font-weight: bold;
 }
 .main{
@@ -40,8 +48,9 @@ button:hover{
 }
 .sections-heading{
     text-align: center;
-    font-family: monospace;
-    color: rgb(186, 96, 96);
+    font-family: 'circular';
+    color: rgb(34 21 16);
+    font-weight: 600;
 }
 .card{
     margin: 5px;
@@ -88,12 +97,12 @@ button:hover{
 }
 .card-group>.card {
     flex: 1 0 0%;
-    margin-bottom: 0;
     margin: 50px;
     height: 606px;
     background: linear-gradient(148deg, #9889c0, transparent);
-    color: rgb(47, 5, 69);
-    font-weight: 700;
+    color: rgb(2 2 2);
+    font-size: larger;
+    font-weight: 500;
 }
 .card-img-top{
     opacity: 0.8;
@@ -106,10 +115,186 @@ button:hover{
     /* transition: 0.1s ease-in-out; */
     
 }
+.hatcher-logo{
+    height: 65px;
+    cursor: pointer;
+}
+.buy-btn{
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+}
+.silver_card{
+    background: linear-gradient(94deg, #c3c7d0, #0000000d);
+    border-radius: 16px;
+}
+.silver_card:hover{
+    box-shadow: #c3c7d0 0px 0px 10px 5px;
+}
+.golden_card{
+    background: linear-gradient(131deg, #FFD700, #0000000d);
+    border-radius: 16px;
+}
+.golden_card:hover{
+    box-shadow: #FFD700 0px 0px 10px 5px;
+}
+.diamond_card{
+    background: linear-gradient(94deg, #95deff, #0000000d);
+    border-radius: 16px;
+}
+.diamond_card:hover{
+    box-shadow: #95deff 0px 0px 10px 5px;
+}
 
+.feedback-section{
+    font-size: larger;
+    font-weight: 700;
+}
+
+.btn-gradient1 {
+    background-image: linear-gradient(to right,
+                    #870000 0%, #b75534  51%,
+                    #870000  100%);
+    border: none;
+    color: rgb(3, 2, 2);
+    font-weight: 700;
+    }
+.btn-gradient2 {
+    background-image: linear-gradient(to right,
+                    #512de2 0%, #163f9e  51%,
+                    #512de2  100%);
+    border: none;
+    color: rgb(3, 2, 2);
+    font-weight: 700;
+    }
+
+.social-icons {
+    display: inline-block
+}
+.social-icons>li {
+    list-style: none;
+    display: inline;
+    margin: 0 10px;
+}
+
+.footer{
+    background-color: black;
+    color: white;
+    height: fit-content;
+}
+.footer_container{
+    display: flex;
+    flex-direction: row;
+    padding: 50px 0;
+    justify-content: space-around;
+}
+.footer_container1{
+    font-size: 80px;
+    line-height: 80px;
+    display: inline-block;
+    width: 47%;
+}
+.get_started_free {
+    color: white;
+    font-size: 45px;
+    background-color: rgb(85, 81, 255);
+    border-radius: 15px;
+    text-align: center;
+    padding : 30px 70px;
+    width: 35%;
+    line-height: 45px;
+    transition: transform 0.3s ease;
+    font-weight: 600;
+}
+.get_started_free:hover{
+    transform: translateY(-5px);
+}
+.alternate_word{
+    font-weight: 600;
+}
+.footer_mentions{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.footer_content{
+    display: flex;
+    flex-direction: column;
+    line-height: 40px;
+    padding: 0 50px;
+}
+.footer_img{
+    fill: #4c4bde;
+    margin-right: 8px;
+}
+.mentions{
+    font-size: large;
+
+}
+.mentions:hover{
+    text-decoration: underline;
+    text-underline-offset: 10px;
+}
+.mention-head{
+    font-size: 20px;
+    font-weight: 600;
+    color: #f2b950;
+}
+.Copyright{
+    font-size: small;
+    padding-bottom: 5px;
+}
+.hatcher_logo2{
+    margin-left: -9px;
+}
+.price_card_features{
+    margin: 10px;
+}
+.price_card_features > p {
+    font-weight: 700;
+}
+.price_card_title{
+    text-align: center;
+    font-size: x-large;
+    font-weight: 700;
+}
 
 /* Responsive */
 @media (max-width: 995px) {
+    .footer_container{
+        display: flex;
+        flex-direction: column;
+        padding: 50px 0;
+        justify-content: space-around;
+    }
+    .footer_mentions{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .footer_container1 {
+        font-size: 41px;
+        line-height: 42px;
+        display: inline-block;
+        width: 100%;
+        padding: 20px 50px;
+    }
+    .get_started_free {
+        color: white;
+        font-size: 24px;
+        background-color: rgb(85, 81, 255);
+        border-radius: 15px;
+        text-align: center;
+        padding: 10px 50px;
+        margin: auto;
+        line-height: 31px;
+        transition: transform 0.3s ease;
+        font-weight: 600;
+        width: 79%;
+    }
+    .navbar-brand{
+        padding-left: 0;
+    }
     #navbarNav{
         padding-right: 0px ;
         justify-content: end;
